@@ -1,3 +1,9 @@
+2006-10-23 01:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* English.lproj/GormHelpInspector.gorm: Change resize properties.
+	* GormCore/GormHelpInspector.m: in revert: blank text field when
+	no connections are retrieved.
+
 2006-10-23 01:14-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/GormHelpInspector.gorm: Help inspector .gorm file.
